# mumag_matrixfree2

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BENCHMARK_REPORT.md  CHAT_HISTORY.md  CHAT_HISTORY_TUNING.md  CMakeLists.txt  PERFORMANCE_TUNING.md  README.md  activate_build.sh  analyze_trace.py  compile_cpp_minimizer.sh  compile_local.sh  cpp_bench.txt  create_mkl_ffi.py  cube.krn  cube_20nm.krn  cube_20nm.npz  cube_20nm.p2  cube_20nm.vtu  diff_8c08214.txt  diff_last_commit.patch  diff_uncommitted.patch  full_diff.patch  generate_report.py  generate_test_mesh.py  git_log_2.patch  install_cpp.md  materials_nd2fe14b.npz  minimizers_head_1.py  pixi.toml  plot_greene_results.py  py_bench.txt  pyproject.toml  run_bench.sh  run_benchmarks.sh  run_shell_experiments.py  run_sphere.sh  sphere_40nm.p2  stagnetion.md  (+3 more)
.github/workflows/: test.yml
benchmarking/: CMakeLists.txt  analyze_trace.py  compare_minimizers.py  cpp_bench.txt  generate_report.py  generate_test_mesh.py  profile_compilation.py  profile_energy.py  profile_energy_jax.py  run_benchmarks.sh  run_comparison_benchmark.sh  test_poisson_convergence.py
benchmarking/src_cpp/: fem_utils.cpp  profile_energy.cpp  test_energy.cpp
develop/pyvista_field/: example.ipynb  pixi.toml
develop/strain/: plot_greene_results.py  test_stoner_wohlfarth_me.py
develop/strain/lsdyna/: export_vtk.py
doc/: arrays.md  bunge_rotation.tex  cg_comparison.tex  commits_since_july_13.md  compare2.md  cpu_optimization.aux  cpu_optimization.out  curvilinear_temp.txt  energy_verification.tex  magnetoelastic_derivation.tex  multi_gpu_analysis.aux  multi_gpu_analysis.out  multi_gpu_analysis.tex  paper.aux  paper.bbl  paper.blg  paper.tex  references.bib
doc/developer_notes/: PROGRESS_SUMMARY.md
examples/benchmark_1/: benchmark1_workflow.py
examples/benchmark_1/isotrop_down/: isotrop.krn  isotrop.p2
examples/benchmark_1/isotrop_up/: isotrop.p2
examples/evaluate_materials/: analyze_evaluations.py  clean_evaluations.sh  compute_evaluations.py  evaluate_properties.py  generate_structures.py  patch_header.py  run_evaluate_properties.slurm  run_generate_structures.slurm  slurm-182750.err  slurm-182751.err
examples/evaluate_materials/base_structures/: metadata.txt
examples/evaluate_materials/base_structures/structure_01/: isotrop.krn  n8-id124.tess
examples/evaluate_materials/base_structures/structure_02/: isotrop.krn  n8-id125.tess
examples/evaluate_materials/base_structures/structure_03/: isotrop.krn  n8-id126.tess
examples/evaluate_materials/base_structures/structure_04/: isotrop.krn  n8-id127.tess
examples/evaluate_materials/base_structures/structure_05/: isotrop.krn  n8-id128.tess
examples/evaluate_materials/base_structures/structure_06/: isotrop.krn  n8-id129.tess
hard_axis_loop/: hysteresis.csv
hyst_sphere_40nm/: sphere_40nm.mh
samples/: bench_ptr.sh  check_results.py  cube_20nm.krn  cube_20nm.p2  cube_20nm_halfK1.krn  prepare_verification.py  run_cube.sh  run_sample.sh  run_sphere.sh  run_sphere.slurm  sphere_40nm.krn  sphere_40nm.p2
samples/bench_demag_curve/: cube_20nm.mh
samples/custom_test/: slurm-172671.out  test_model.inp  test_model.krn
samples/demag/: cube_20nm.krn
samples/hyst_sphere_40nm/: sphere_40nm.mh
samples/no_demag/: cube_20nm.p2
samples/sphere10/: readme.md  run_sphere10.sh
samples/sphere20/: run_sphere20.sh
samples/sphereR10nm/: readme.md  run_sphereR10nm.sh  sphereR10nm.p2
samples/sphereR20nm/: readme.md  run_sphereR20nm.sh  sphereR20nm.krn
slurm/: clean_cpu_run.sh  clean_gpu_run.sh  run_cpu.slurm  run_custom.slurm  run_gpu.slurm  run_sample.slurm  run_test_magnetoelastic.slurm  run_tests.slurm  run_tests_gpu.slurm
src/: add_shell.py  aggregation_utils.py  amg_utils.py  analyze_trace.py  cpp_minimizer.py  cpp_mkl_minimizer.cpp  curvilinear_bb_minimizer.py  energy_kernels.py  extract_nucleation.py  fem_utils.py  hysteresis_loop.py  io_utils.py  loop.py  make_krn.py  mesh.py  mesh_convert.py  minimizers.py  plot_hysteresis.py  plot_sw.py  poisson_solve.py  profile_compilation.py  profile_energy.py  profile_energy_jax.py  reorder_mesh.py  run_profiler.py  salomeMeshToNpz.py  test_energy.py  test_gradients.py  test_hysteresis_no_demag.py  test_hysteresis_x_axis.py  test_minimizer_relaxation.py  test_poisson_advanced.py  test_poisson_convergence.py  test_stoner_wohlfarth.py  test_stoner_wohlfarth_inp.py  test_stoner_wohlfarth_me.py
src/cpp/: CMakeLists.txt  cpp_mkl_minimizer.cpp  mkl_ffi.cpp
src/mkl_ffi/: CMakeLists.txt  mkl_ffi.cpp
src_cpp/: energy_kernels.cpp  energy_kernels.hpp  fem_utils.cpp  fem_utils.hpp  poisson_solve.cpp  poisson_solve.hpp  test_energy.cpp  test_poisson_convergence.cpp
tests/: __init__.py  check_me_precision.py  conftest.py  single_solid.npz  test_aapg.py  test_behavior_options.py  test_bias_field.py  test_compare_kernels.py  test_cpp_minimizer.py  test_energy.py  test_gradients.py  test_hysteresis_no_demag.py  test_jax_mkl.py  test_magnetoelastic_additive.py  test_minimizer_relaxation.py  test_mkl.py  test_mkl_ffi.py  test_mkl_jit.py  test_py_minimizer.py  test_stoner_wohlfarth.py  test_tolerances.py
tests/stable/: test_mesh.py  test_relaxation.py  test_standard_problem_3.py  test_stoner_wohlfarth_switching.py
viz/: plot_combined.py  visualize_lbfgs.py  visualize_mesh_slice.py  visualize_switching.py
(+8 files in other folders)
